# Piezoelectrics-AI-Discovery-Lab

./: .env.example  .gitignore  AI-Assisted Discovery of New Lead-Free Piezoelectrics.md  Book2.xlsx  Codebased changes and improvement log.md  Final_Minor_Project_AK (1).ipynb  README.md  Readme.md  add_column.py  dataset-tampered.csv  docker-compose.yml  excel_to_csv_converter.py  materials_master_dataset.xlsx  normalized_material_data.csv  package.json  pnpm-lock.yaml  poster_content.md  project_report.md  requirements.txt  test_celery.py  test_db.py  test_error.csv  test_predict.py  turbo.json
.claude/: settings.json  (+1 more)
apps/api/: package.json  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py  database.py  errors.py  logging.py  logging_config.py  telemetry.py
apps/api/app/modules/: __init__.py
apps/api/app/modules/active_learning/: router.py
apps/api/app/modules/agent/: __init__.py  agent_graph.py  llm_provider.py  router.py  schemas.py  service.py  tools.py  voice_router.py
apps/api/app/modules/composite/: router.py
apps/api/app/modules/dashboard/: __init__.py  router.py  schemas.py  service.py
apps/api/app/modules/dataset/: __init__.py  router.py  schemas.py  service.py
apps/api/app/modules/hardness/: router.py
apps/api/app/modules/interpret/: __init__.py  router.py  schemas.py  service.py
apps/api/app/modules/inverse/: router.py  schemas.py
apps/api/app/modules/optimization/: __init__.py  router.py  schemas.py  service.py
apps/api/app/modules/prediction/: __init__.py  router.py  schemas.py  service.py
apps/api/app/modules/settings/: __init__.py  router.py  schemas.py  service.py
apps/api/app/modules/system/: router.py  schemas.py  service.py
(+234 files in other folders)
